--- a/assets/sass/foundation/_components.scss
+++ b/assets/sass/foundation/_components.scss
@@ -4,9 +4,19 @@
 // To enable, just uncomment and re-run `gulp styles`.
 //--------------------------------------------------------------
 @include foundation-global-styles;
+@include xy-grid;
+@include foundation-xy-grid-classes(
+  $base-grid: true,
+  $margin-grid: true,
+  $padding-grid: true,
+  $block-grid: true,
+  $collapse: true,
+  $offset: true,
+  $vertical-grid: true
+);
 // @include foundation-grid;
-@include foundation-flex-grid;
-@include foundation-flex-classes;
+// @include foundation-flex-grid;
+// @include foundation-flex-classes;
 @include foundation-typography;
 @include foundation-forms;
 @include foundation-button;
