--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Red Key Club - Use Me
+Theme Name: Red Key Club
 Theme URI: https://redkeyclub.com/
 Author: Pea
 Author URI: https://pealutz.met/
