Add templates and styling

--- a/assets/scss/critical/_header.scss
+++ b/assets/scss/critical/_header.scss
@@ -2,6 +2,8 @@
 // Global Site Header
 //--------------------------------------------------------------
 .site-header {
+	@apply mb-8;
+	
 	.site-header-content {
 		@apply m-0;
 
