--- a/assets/scss/templates/index.scss
+++ b/assets/scss/templates/index.scss
@@ -6,7 +6,9 @@
 
 @import './posts';
 @import './courses';
+@import './events';
 @import './forum';
 @import './post';
 @import './course';
+@import './event';
 @import './front-page';
