--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -4,3 +4,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply rounded-none;
+    }
+    
+    .card {
+        @apply rounded-none;
+    }
+}
