--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,5 @@
-<!-- wp:group {"align":"full","layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignfull"><!-- wp:columns {"verticalAlignment":"center","isStackedOnMobile":false,"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60"}}}} -->
-<div class="wp-block-columns alignwide are-vertically-aligned-center is-not-stacked-on-mobile" style="padding-top:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60)"><!-- wp:column {"verticalAlignment":"center","width":"100%"} -->
-<div class="wp-block-column is-vertically-aligned-center" style="flex-basis:100%"><!-- wp:site-logo /--></div>
-<!-- /wp:column -->
+<!-- wp:template-part {"slug":"header","area":"header","tagName":"header"} /-->
 
-<!-- wp:column {"verticalAlignment":"center","width":"100%"} -->
-<div class="wp-block-column is-vertically-aligned-center" style="flex-basis:100%"><!-- wp:navigation {"ref":221,"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"right"}} /--></div>
-<!-- /wp:column --></div>
-<!-- /wp:columns --></div>
-<!-- /wp:group -->
+<!-- wp:post-content {"tagName":"main","align":"full","layout":{"type":"constrained"}} /-->
 
-<!-- wp:group {"tagName":"main","align":"full","style":{"spacing":{"blockGap":"var:preset|spacing|50"}},"className":"alignfull","layout":{"type":"constrained"}} -->
-<main class="wp-block-group alignfull"><!-- wp:post-title /-->
-
-<!-- wp:post-content /--></main>
-<!-- /wp:group -->
-
-<!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignwide"><!-- wp:site-logo {"align":"center"} /-->
-
-<!-- wp:paragraph {"align":"center","style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"var:preset|spacing|20","bottom":"0"}}},"fontSize":"small"} -->
-<p class="has-text-align-center has-small-font-size" style="margin-top:var(--wp--preset--spacing--20);margin-bottom:0;padding-top:0;padding-bottom:0"> Copyright © 2023. All Rights Reserved.</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph {"align":"center","style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"var:preset|spacing|20","bottom":"0"}}},"fontSize":"small"} -->
-<p class="has-text-align-center has-small-font-size" style="margin-top:var(--wp--preset--spacing--20);margin-bottom:0;padding-top:0;padding-bottom:0"> Proudly powered by WordPress. <a href="https://misfist.com/">Misfist</a> is a WD3 Party.</p>
-<!-- /wp:paragraph --></div>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"footer","area":"footer","tagName":"footer"} /-->
